--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,398 @@
-.App {
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&family=Roboto:wght@300;400;700&family=Ubuntu:ital,wght@0,400;0,500;0,700;1,300&display=swap");
+
+:root {
+  /* color */
+  --main-color: rgb(0, 156, 246);
+  --secondery-color: rgb(98, 98, 98);
+  /* font */
+  --ubuntu: "Ubuntu", sans-serif;
+  --poppins: "Poppins", sans-serif;
+  --roboto: "Roboto", sans-serif;
+}
+* {
+  font-family: var(--roboto);
+}
+
+.bg-navbar {
+  background-color: rgb(255, 255, 255);
+}
+.brand-align {
+  display: block;
+}
+.logo-name {
+  color: var(--main-color);
+  font-family: var(--ubuntu);
+  font-size: 30px;
+  font-weight: bold;
+}
+.home-container {
+  position: relative;
+  height: 100vh;
+  width: 100%;
+  background-image: url("./components/images/Slide1.jpg");
+  background-size: cover;
+}
+
+.opacity-bg {
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.781);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.title {
+  width: calc(100vw / 2);
+  font-size: 40px;
   text-align: center;
+  color: white;
+  font-weight: bold;
+  margin: 25px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.button {
+  outline: none;
+  border: none;
+  padding: 10px;
+  width: 200px;
+  height: 50px;
+  font-size: 20px;
+  font-weight: bold;
+  color: white;
+  background-color: var(--main-color);
+  border-radius: 10px;
+  cursor: pointer;
+  transition: 0.2s;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+button:hover {
+  background-color: rgb(7, 130, 246);
+  font-size: 22px;
+}
+@media (max-width: 650px) {
+  .home-container {
+    background-position: center;
+    height: 40vh;
+  }
+  .opacity-bg {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  .title {
+    font-size: 20px;
+    margin: 25px;
+  }
+  .button {
+    padding: 10px;
+    width: 150px;
+    height: 50px;
+    transform: scale(0.9);
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* About us */
+
+.about-container {
+  background-color: var(--main-color);
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.about-content-div {
+  margin: 20px;
+  padding: 10px;
+  width: calc((99vw / 1.5));
+  background-color: white;
+  border-radius: 15px;
+}
+@media (max-width: 800px) {
+  .about-content-div {
+    width: calc((100vw / 1.2));
+  }
+}
+.about-content-div p {
+  margin: 10px 20px;
+  color: var(--secondery-color);
+  font-size: 18px;
+  text-align: justify;
+}
+
+/* Section Title */
+.section-div {
+  display: inline;
+  justify-content: center;
+  margin: 40px 0;
+}
+
+.section-title {
+  /* top: 0;
+  left: 50%; */
+  /* transform: translateX(-50%); */
+  color: white;
+  font-size: 25px;
+  font-family: var(--ubuntu);
+  font-weight: lighter;
+  position: relative;
+  display: inline;
+  line-height: 0;
+}
+.section-title.blue {
+  color: var(--main-color);
+}
+.section-title::after {
+  content: "";
+  position: absolute;
+  text-align: center;
+  width: 80%;
+  left: 50%;
+  height: 3px;
+  transform: translateX(-50%);
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(255, 255, 255);
+  border-radius: 50px;
+}
+.section-title.blue::after {
+  background-color: var(--main-color);
+}
+
+/* carousel */
+
+.carousel-div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.all-carousel {
+  width: 80%;
+  display: inline-flex;
+  justify-content: center;
+  height: 350px;
+}
+.div-per-carousel {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  width: 80vw;
+}
+.carousel-div p {
+  text-align: center;
+  font-size: 25px;
+  color: white;
+}
+.carousel-image-div {
+  margin: 10px;
+  height: 300px;
+  width: 300px;
+  background: white;
+  border-radius: 10px;
+  overflow: hidden;
+  text-align: center;
+  padding: 10px;
+}
+
+.carousel-image {
+  width: 100%;
+  height: 80%;
+  background-color: burlywood;
+}
+
+.carousel-text {
+  margin: 20px;
+  color: var(--secondery-color);
+}
+
+/* at your service */
+.at-your-service {
+  margin: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.service-all-card {
+  margin: 25px 10px;
+  display: flex;
+
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+.service-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin: 5px;
+  width: 450px;
+}
+@media (max-width: 650px) {
+  .service-card {
+    width: 95%;
+  }
+}
+.icon {
+  font-size: 60px;
+  color: var(--main-color);
+}
+.service-title {
+  font-size: 25px;
+  color: var(--secondery-color);
+}
+.service-subtitle {
+  font-size: 20px;
+  color: var(--secondery-color);
+  width: 95%;
+}
+
+/* our works */
+.our-works {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.all-works {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.works-image-div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 200px;
+  width: 200px;
+  background-color: var(--main-color);
+  padding: 10px;
+  border-radius: 10px;
+  margin: 10px 10px;
+}
+.works-image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  padding: 15px;
+  height: 85%;
+  width: 100%;
+  background-color: white;
+  border-radius: 10px;
+  overflow: hidden;
+}
+.works-image img {
+  position: absolute;
+  height: auto;
+  width: 90%;
+}
+.works-text {
+  margin: 10px 0;
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
+}
+/* we-work-with */
+.we-work-with {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.all-tech {
+  padding: 20px;
+  width: 70%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+.Technologies {
+  margin: 40px 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
+  height: 150px;
+  width: 180px;
+  /* background-color: antiquewhite; */
+  border-radius: 10px;
+  overflow: hidden;
+}
+.tech-img {
+  height: 70%;
+  width: 100%;
+  object-fit: contain;
+}
+.tech-name {
+  color: var(--secondery-color);
+  font-size: 20px;
+}
+/* contact us */
+.contact-us {
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
-
-.App-link {
-  color: #61dafb;
+.cantact-all-info {
+  margin: 40px;
+  width: 50%;
+  display: flex;
+  justify-content: space-around;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.cantact-us-text {
+  width: 30%;
+  text-align: center;
+  font-size: 20px;
+  color: var(--secondery-color);
+}
+.info-content {
+  text-align: center;
+}
+.info-icon {
+  color: var(--main-color);
+  font-size: 50px;
+}
+.info-text {
+  color: var(--secondery-color);
+  font-size: 20px;
+}
+.info-text.email {
+  color: var(--main-color);
+  cursor: pointer;
+}
+@media (max-width: 650px) {
+  .cantact-all-info {
+    flex-direction: column;
   }
-  to {
-    transform: rotate(360deg);
+  .cantact-us-text {
+    width: 90%;
   }
+}
+/* footer */
+.footer-div {
+  width: 100%;
+  padding: 20px;
+  text-align: center;
+  background-color: rgb(224, 224, 224);
+}
+.footer-text {
+  color: var(--secondery-color);
+}
+.modal-div {
+  height: 600px;
+  width: 100%;
 }
