--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,18 @@
 * {
   font-family: var(--roboto);
 }
+body::-webkit-scrollbar {
+  width: 10px; /* width of the entire scrollbar */
+}
+body::-webkit-scrollbar-track {
+  background: rgb(0, 0, 0); /* color of the tracking area */
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: var(--main-color); /* color of the scroll thumb */
+  border-radius: 10px; /* roundness of the scroll thumb */
+  border: 1px solid transparent; /* creates padding around scroll thumb */
+}
 
 .bg-navbar {
   background-color: rgb(0, 0, 0);
@@ -111,11 +123,11 @@
 }
 
 .about-content-div {
-  margin: 20px;
   padding: 10px;
   width: calc((99vw / 1.5));
   background-color: white;
   border-radius: 15px;
+  margin: 20px 0;
 }
 @media (max-width: 800px) {
   .about-content-div {
@@ -141,7 +153,7 @@
   left: 50%; */
   /* transform: translateX(-50%); */
   color: white;
-  font-size: 25px;
+  font-size: 35px;
   font-family: var(--ubuntu);
   font-weight: lighter;
   position: relative;
@@ -209,6 +221,11 @@
   height: 80%;
   background-color: burlywood;
 }
+.carousel-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 
 .carousel-text {
   margin: 20px;
@@ -217,11 +234,11 @@
 
 /* at your service */
 .at-your-service {
-  margin: 20px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: white;
 }
 .service-all-card {
   margin: 25px 10px;
