--- a/src/components/works/works.css
+++ b/src/components/works/works.css
@@ -4,6 +4,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: var(--main-color);
+
+  padding: 20px;
 }
 /* .all-works {
   display: flex;
@@ -13,28 +16,32 @@
 } */
 
 .work-div {
+  margin: 5px;
   padding: 10px;
   width: 65%;
   height: 450px;
-  background-color: rgb(246, 246, 246);
+  background-color: rgb(245, 245, 245);
   display: flex;
   /* flex-direction: column; */
   /* justify-content: center; */
   /* align-items: center; */
 }
-.work-image,
-.work-content {
+
+.work-image {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 60%;
   margin: 5px;
-  background-color: white;
+  height: 100%;
+  background-color: rgb(255, 255, 255);
   border-radius: 10px;
+  object-fit: cover;
+  overflow: hidden;
 }
 .work-image img {
   width: 100%;
-  height: auto;
+  height: 100%;
   box-shadow: 0px 0px 30px #0000001c;
   z-index: 1;
   object-fit: cover;
@@ -45,8 +52,10 @@
 } */
 .work-content {
   flex-direction: column;
-  padding: 20px;
+  padding: 0 20px;
   width: 40%;
+  overflow: auto;
+  scroll-behavior: smooth;
 }
 
 .main-content,
@@ -84,4 +93,55 @@
 }
 .visit-button {
   width: 30%;
+}
+.slid-div {
+  display: flex;
+  width: 100%;
+  height: 500px;
+  justify-content: center;
+  align-items: center;
+}
+
+@media (max-width: 1100px) {
+  .work-div {
+    width: 90%;
+    height: auto;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .main-content,
+  .sub-content {
+    margin: 15px 10px;
+  }
+  .work-image {
+    flex-direction: column;
+    width: 100%;
+    height: 50%;
+
+    border-radius: 0px;
+  }
+  .work-image img {
+    flex-direction: column;
+    width: 100%;
+    border-radius: 0px;
+  }
+  .work-content {
+    width: 100%;
+    overflow: auto;
+  }
+}
+.work-content::-webkit-scrollbar {
+  width: 5px; /* width of the entire scrollbar */
+}
+.work-content::-webkit-scrollbar-track {
+  background: rgb(236, 236, 236); /* color of the tracking area */
+}
+
+.work-content::-webkit-scrollbar-thumb {
+  background-color: rgb(200, 200, 200); /* color of the scroll thumb */
+  border-radius: 10px; /* roundness of the scroll thumb */
+  border: 3px solid transparent; /* creates padding around scroll thumb */
 }
