--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 .bg-navbar {
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(0, 81, 173);
 }
 .brand-align {
   display: block;
@@ -129,6 +129,7 @@ body::-webkit-scrollbar-thumb {
   border-radius: 15px;
   margin: 20px 0;
 }
+
 @media (max-width: 800px) {
   .about-content-div {
     width: calc((100vw / 1.2));
@@ -192,7 +193,7 @@ body::-webkit-scrollbar-thumb {
   width: 80%;
   display: inline-flex;
   justify-content: center;
-  height: 350px;
+  height: auto;
 }
 .div-per-carousel {
   display: flex;
@@ -207,8 +208,8 @@ body::-webkit-scrollbar-thumb {
 }
 .carousel-image-div {
   margin: 10px;
-  height: 300px;
-  width: 300px;
+  height: 400px;
+  width: 600px;
   background: white;
   border-radius: 10px;
   overflow: hidden;
@@ -228,90 +229,12 @@ body::-webkit-scrollbar-thumb {
 }
 
 .carousel-text {
+  font-size: 25px;
+  background-color: rgb(240, 240, 240);
   margin: 20px;
   color: var(--secondery-color);
 }
 
-/* at your service */
-.at-your-service {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-color: white;
-}
-.service-all-card {
-  margin: 25px 10px;
-  display: flex;
-
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-}
-.service-card {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  margin: 5px;
-  width: 450px;
-}
-@media (max-width: 650px) {
-  .service-card {
-    width: 95%;
-  }
-}
-.icon {
-  font-size: 60px;
-  color: var(--main-color);
-}
-.service-title {
-  font-size: 25px;
-  color: var(--secondery-color);
-}
-.service-subtitle {
-  font-size: 20px;
-  color: var(--secondery-color);
-  width: 95%;
-}
-
-/* we-work-with */
-.we-work-with {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.all-tech {
-  padding: 20px;
-  width: 70%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-}
-.Technologies {
-  margin: 40px 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  height: 150px;
-  width: 180px;
-  /* background-color: antiquewhite; */
-  border-radius: 10px;
-  overflow: hidden;
-}
-.tech-img {
-  height: 70%;
-  width: 100%;
-  object-fit: contain;
-}
-.tech-name {
-  color: var(--secondery-color);
-  font-size: 20px;
-}
 /* contact us */
 .contact-us {
   display: flex;
