--- a/src/components/tech/tech.css
+++ b/src/components/tech/tech.css
@@ -7,7 +7,7 @@
 }
 .all-tech {
   padding: 20px;
-  width: 60%;
+  width: 70%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -16,6 +16,16 @@
 @media (max-width: 1000px) {
   .all-tech {
     width: 70%;
+  }
+}
+@media (max-width: 750px) {
+  .all-tech {
+    width: 90%;
+  }
+}
+@media (max-width: 450px) {
+  .all-tech {
+    width: 100%;
   }
 }
 .Technologies {
