--- a/src/App.css
+++ b/src/App.css
@@ -69,6 +69,11 @@ body::-webkit-scrollbar-thumb {
   margin: 25px;
   /* background-color: rgba(0, 0, 0, 0.89); */
 }
+@media (max-width: 1000px) {
+  .title {
+    width: calc(100vw / 1.3);
+  }
+}
 .button {
   outline: none;
   border: none;
