--- a/src/components/works/works.css
+++ b/src/components/works/works.css
@@ -69,6 +69,7 @@
 .company-info {
   color: var(--secondery-color);
   font-size: 18px;
+  text-align: justify;
 }
 .used-technology {
   color: var(--secondery-color);
