--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&family=Roboto:wght@300;400;700&family=Ubuntu:ital,wght@0,400;0,500;0,700;1,300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat&family=Ubuntu:wght@400;500;700&display=swap");
 
 :root {
   /* color */
@@ -7,10 +7,10 @@
   /* font */
   --ubuntu: "Ubuntu", sans-serif;
   --poppins: "Poppins", sans-serif;
-  --roboto: "Roboto", sans-serif;
+  --montserrat: "Montserrat", sans-serif;
 }
 * {
-  font-family: var(--roboto);
+  font-family: var(--montserrat);
 }
 body::-webkit-scrollbar {
   width: 10px; /* width of the entire scrollbar */
