--- a/src/components/service/service.css
+++ b/src/components/service/service.css
@@ -79,10 +79,13 @@
 }
 
 .service-title {
+  background-color: var(--main-color);
+  border-radius: 5px;
+  padding: 0 10px;
   position: relative;
   margin-top: 20px;
   font-size: 25px;
-  color: var(--secondery-color);
+  color: white;
   margin-bottom: 10px;
 }
 
