--- a/src/components/works/works.css
+++ b/src/components/works/works.css
@@ -22,8 +22,8 @@
   background-color: rgb(246, 246, 246);
   display: flex;
   /* flex-direction: column; */
-  /* justify-content: center; */
-  /* align-items: center; */
+  justify-content: center;
+  align-items: center;
 }
 
 .work-image {
@@ -102,10 +102,10 @@
   align-items: center;
 }
 
-@media (max-width: 1100px) {
+@media (max-width: 1400px) {
   .work-div {
     width: 90%;
-    height: 500px;
+    height: auto;
 
     display: flex;
     flex-direction: column;
