--- a/src/components/contactus/contactUs.css
+++ b/src/components/contactus/contactUs.css
@@ -16,7 +16,7 @@
 }
 .address {
   height: 50px;
-  width: 50%;
+  width: 65%;
   position: relative;
 }
 .hr {
@@ -66,20 +66,22 @@
 .location {
   /* position: absolute; */
   top: 100%;
-  width: 50%;
+  width: 70%;
 
   height: auto;
   display: flex;
   justify-content: space-between;
 }
 .location .content {
-  background: blue;
-  width: calc(100% / 3);
+  width: calc(100% / 1);
   height: auto;
   color: white;
   padding: 10px;
   border-radius: 10px;
   text-align: left;
+}
+.location .content p {
+  margin: 2px;
 }
 .icons {
   /* font-size: 20px;
@@ -87,12 +89,15 @@
 }
 .location .content:nth-child(1) {
   background: linear-gradient(#ff636e, #fd1951);
+  height: 10%;
 }
 .location .content:nth-child(2) {
   background: linear-gradient(#e246f0, #8c46f0);
+  height: 10%;
 }
 .location .content:nth-child(3) {
   background: linear-gradient(#8cc6f0, #8c91f0);
+  height: 10%;
 }
 .location .content:nth-child(1) {
   transform: translateX(-50%);
@@ -128,7 +133,7 @@
 @media (max-width: 1200px) {
   .location .content {
     width: calc(100% / 3.3);
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
     padding: 10px;
     border-radius: 10px;
     font-size: 15px;
